--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>My Portfolio</h1>
+        <h1 style="color: blue;">My Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Write something about yourself here...</p>
+        <p>Hello, my name is Anirudh Kulakarni and I am a passionate and skilled computer professional. I have completed my Master of Computer Applications (MCA) from Kakatiya University, Warangal with a CGPA of 8.15. I have a strong foundation in various programming languages, databases, web development, and software engineering. I am eager to learn new technologies and apply them to solve real-world problems. I am looking for an opportunity to work in a reputed company where I can showcase my talents and contribute to the growth of the organization. Please consider me for any position that matches my profile and interests. Thank you for your time and attention.</p>
     </section>
 
     <section id="portfolio">
